# duc

./: CMakeLists.txt  duc-config.cmake.in
.github/workflows/: codeql-analysis.yml
cmake/: WaykSDK.cmake
include/duc/: core.h  platform.h  tape.h  time.h
libduc/: CMakeLists.txt
libduc/core/: CMakeLists.txt  Duc.c  DucPixelBuffer.c  DucPixelFormat.c
libduc/core/test/: .gitignore  CMakeLists.txt  TestDucCore.c
libduc/tape/: CMakeLists.txt  DucTape.c
libduc/utils/: CMakeLists.txt  DucTime.c
libduc/xpp/: CMakeLists.txt  NowCodec.c  NowColor.c  NowImage.c  WaykSDK.cmake  XppCodec.c  XppColor.c  XppCopy.c  XppDiff.c  XppPrim.c  XppScale.c
libduc/xpp/halide/: CMakeLists.txt
libduc/xpp/include/xpp/: codec.h  color.h  math.h  prim.h  scale.h  xpp.h
libduc/xpp/simd/: NowCodec_neon.c  NowCodec_sse2.c  NowColor_neon.c  NowColor_sse2.c  XppCodec_neon.c  XppCodec_sse2.c  XppColor_neon.c  XppColor_sse2.c  simd.c  simd.h
spec/: DUC_Format.docx
